--- a/backgrounds.html
+++ b/backgrounds.html
@@ -152,8 +152,10 @@
 			<div class="stats-wrapper  margin-bottom_large">
 				<div class="name margin-bottom_small"></div>
 				<div class="stats margin-bottom_small"></div>
-				<div class="table-container collapse disabled">
-					<div class="collapse-toggle">Trait Roll Tables</div>
+				<div class="table-container collapse collapse--left-arrow disabled">
+					<div class="collapse-toggle">
+						<div class="mdc-list-item">Trait Roll Tables</div>
+					</div>
 					<div class="collapse-wrapper">
 						<div class="collapse-list"></div>
 					</div>
@@ -209,6 +211,8 @@
 	<script type="text/javascript" src="js/backgrounds.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script data-no-instant>InstantClick.init();</script>
 </body>
 
 </html>
