--- a/bestiary.html
+++ b/bestiary.html
@@ -293,6 +293,8 @@
 	<script type="text/javascript" src="js/bestiary.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script data-no-instant>InstantClick.init();</script>
 </body>
 
 </html>
