--- a/classes.html
+++ b/classes.html
@@ -339,6 +339,8 @@
 	<script type="text/javascript" src="lib/droll.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script data-no-instant>InstantClick.init();</script>
 
 	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none">
 		<defs>
