--- a/conditions.html
+++ b/conditions.html
@@ -200,6 +200,8 @@
 	<script type="text/javascript" src="js/conditions.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script data-no-instant>InstantClick.init();</script>
 </body>
 
 </html>
