--- a/psionics.html
+++ b/psionics.html
@@ -198,6 +198,8 @@
 	<script type="text/javascript" src="js/psionics.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script data-no-instant>InstantClick.init();</script>
 
 </body>
 
