--- a/rules.html
+++ b/rules.html
@@ -238,6 +238,8 @@
 	<script type="text/javascript" src="js/rules.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script data-no-instant>InstantClick.init();</script>
 </body>
 
 </html>
