--- a/spells.html
+++ b/spells.html
@@ -205,5 +205,7 @@
 	<script type="text/javascript" src="js/spells.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script data-no-instant>InstantClick.init();</script>
 </body>
 </html>
