Initial commit for trying to get spa links to work.

--- a/items.html
+++ b/items.html
@@ -26,7 +26,7 @@
 	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 	<link rel="manifest" href="manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='js/darkmode.js'></script>
+	<script type='text/javascript' src="js/darkmode.js" data-no-instant></script>
 </head>
 
 <body>
@@ -206,21 +206,20 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="lib/swipe.js"></script>
- 
-    <script type="text/javascript" src="js/nav.js"></script>
-
-	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/filter.js"></script>
-	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/entryrender.js"></script>
-	<script type="text/javascript" src="js/items.js"></script>
-	<script type="text/javascript" src="lib/droll.js"></script>
-	<script type="text/javascript" src="lib/list.js"></script>
-	<script type="text/javascript" src="lib/jquery.js"></script>
-	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script type="text/javascript" src="lib/instantclick.min.js" data-no-instant></script>
 	<script data-no-instant>InstantClick.init();</script>
+	<script type="text/javascript" src="lib/material-components-web.min.js" data-no-instant></script>
+	<script type="text/javascript" src="lib/swipe.js" data-no-instant></script>
+	<script type="text/javascript" src="js/utils.js" data-no-instant></script>
+	<script type="text/javascript" src="js/filter.js" data-no-instant></script>
+	<script type="text/javascript" src="js/history.js" data-no-instant></script>
+	<script type="text/javascript" src="js/entryrender.js" data-no-instant></script>
+	<script type="text/javascript" src="lib/droll.js" data-no-instant></script>
+	<script type="text/javascript" src="lib/list.js" data-no-instant></script>
+	<script type="text/javascript" src="lib/jquery.js" data-no-instant></script>
+ 
+	<script type="text/javascript" src="js/items.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
 </body>
 
 </html>
