--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 	<link rel="manifest" href="manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='js/darkmode.js'></script>
+	<script type='text/javascript' src="js/darkmode.js" data-no-instant></script>
 </head>
 
 <body>
@@ -214,11 +214,27 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="lib/jquery.js"></script>
-	<script src="lib/instantclick.min.js" data-no-instant></script>
+	<script type="text/javascript">
+		if ("serviceWorker" in navigator) {
+		window.addEventListener("load", function() {
+			navigator.serviceWorker.register("/service-worker.js").then(
+				function(registration) {
+					// Registration was successful
+					console.log("ServiceWorker registration successful with scope: ", registration.scope);
+				},
+				function(err) {
+					// registration failed :(
+					console.log("ServiceWorker registration failed: ", err);
+				}
+			);
+		});
+	}
+	</script>
+	<script type="text/javascript" src="lib/instantclick.min.js" data-no-instant></script>
 	<script data-no-instant>InstantClick.init();</script>
-	<script type="text/javascript" src="lib/swipe.js"></script>
+	<script type="text/javascript" src="lib/material-components-web.min.js" data-no-instant></script>
+	<script type="text/javascript" src="lib/jquery.js" data-no-instant></script>
+	<script type="text/javascript" src="lib/swipe.js" data-no-instant></script>
  
     <script type="text/javascript" src="js/nav.js"></script>
 </body>
