--- a/backgrounds.html
+++ b/backgrounds.html
@@ -135,7 +135,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
 					<span class="mdc-list-item__text">Dice Roller</span>
 				</a>
-				<span class='version mdc-typography--caption'>v1.1.0</span>
+				<span class='version mdc-typography--caption'>v1.2.0</span>
 				
 			</nav>
 		</div>
@@ -152,8 +152,10 @@
 			<div class="stats-wrapper  margin-bottom_large">
 				<div class="name margin-bottom_small"></div>
 				<div class="stats margin-bottom_small"></div>
-				<div class="table-container collapse disabled">
-					<div class="collapse-toggle">Trait Roll Tables</div>
+				<div class="table-container collapse collapse--left-arrow disabled">
+					<div class="collapse-toggle">
+						<div class="mdc-list-item">Trait Roll Tables</div>
+					</div>
 					<div class="collapse-wrapper">
 						<div class="collapse-list"></div>
 					</div>
