--- a/dice.html
+++ b/dice.html
@@ -125,7 +125,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
 					<span class="mdc-list-item__text">Dice Roller</span>
 				</a>
-				<span class='version mdc-typography--caption'>v1.1.0</span>
+				<span class='version mdc-typography--caption'>v1.2.0</span>
 				
 			</nav>
 		</div>
@@ -141,7 +141,7 @@
 				<div class='dice-field-container'>
 					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
 						<i class="material-icons mdc-text-field__icon mdc-theme--primary">casino</i>
-						<input type="input" class="mdc-text-field__input roll-field" >
+						<input inputmode="numeric" type="text" class="mdc-text-field__input roll-field" >
 						<div class="mdc-notched-outline">
 							<div class="mdc-notched-outline__leading"></div>
 							<div class="mdc-notched-outline__notch">
@@ -195,8 +195,8 @@
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/filter.js"></script>
 	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/dice.js"></script>
 	<script type="text/javascript" src="lib/droll.js"></script>
+	<script type="text/javascript" src="js/dice.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
 	
