--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
 					<span class="mdc-list-item__text">Dice Roller</span>
 				</a>
-				<span class='version mdc-typography--caption'>v1.2.0</span>
+				<span class='version mdc-typography--caption'>v1.2.1</span>
 			</nav>
 		</div>
 	</aside>
@@ -215,19 +215,19 @@
 	</div>
 
 	<script type="text/javascript">
-		// if ("serviceWorker" in navigator) {
-		// window.addEventListener("load", function() {
-		// 	navigator.serviceWorker.register("/service-worker.js").then(
-		// 		function(registration) {
-		// 			// Registration was successful
-		// 			console.log("ServiceWorker registration successful with scope: ", registration.scope);
-		// 		},
-		// 		function(err) {
-		// 			// registration failed :(
-		// 			console.log("ServiceWorker registration failed: ", err);
-		// 		}
-		// 	);
-		// });
+		if ("serviceWorker" in navigator) {
+		window.addEventListener("load", function() {
+			navigator.serviceWorker.register("/service-worker.js").then(
+				function(registration) {
+					// Registration was successful
+					console.log("ServiceWorker registration successful with scope: ", registration.scope);
+				},
+				function(err) {
+					// registration failed :(
+					console.log("ServiceWorker registration failed: ", err);
+				}
+			);
+		});
 	}
 	</script>
 	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
