Fixing dice input for mobile.

--- a/dice.html
+++ b/dice.html
@@ -141,7 +141,7 @@
 				<div class='dice-field-container'>
 					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
 						<i class="material-icons mdc-text-field__icon mdc-theme--primary">casino</i>
-						<input inputmode="numeric" type="text" class="mdc-text-field__input roll-field" >
+						<input inputmode="numeric" type="tel" class="mdc-text-field__input roll-field" >
 						<div class="mdc-notched-outline">
 							<div class="mdc-notched-outline__leading"></div>
 							<div class="mdc-notched-outline__notch">
@@ -150,6 +150,7 @@
 							<div class="mdc-notched-outline__trailing"></div>
 						</div>
 					</div>
+					<span class='dice-field-label'>Use period (.) or comma (,) to insert a "d".<br/>Use space to insert a plus (+).</span>
 					<button class="mdc-button mdc-button--raised roll-submit">
 						<span class="mdc-button__label">Roll!</span>
 					</button>
