--- a/bestiary.html
+++ b/bestiary.html
@@ -138,6 +138,8 @@
 		<div class="container">
 			<h1 class="page-title mdc-typography--headline2">Bestiary</h1>
 
+			<div class="main-spinner spinner">Loading...</div>
+
 			<button class="mdc-icon-button close-item material-icons">close</button>
 
 			<div id="statscontainer" class="margin-bottom_large stats-wrapper">
