--- a/classes.html
+++ b/classes.html
@@ -150,6 +150,9 @@
 			</svg>
 			<h1 class="page-title mdc-typography--headline2">Classes</h1>
 
+
+			<div class="main-spinner spinner">Loading...</div>
+
 			<button class="mdc-icon-button close-item material-icons">close</button>
 			<button class="mdc-icon-button mdc-button--raised back-to-top material-icons hidden">arrow_upward</button>
 
@@ -328,7 +331,6 @@
 
 	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
 	<script type="text/javascript" src="lib/swipe.js"></script>
-	<script type="text/javascript" src="lib/throttle.js"></script>
  
     <script type="text/javascript" src="js/nav.js"></script>
 
