--- a/conditions.html
+++ b/conditions.html
@@ -147,6 +147,9 @@
 		<div class="container">
 			<h1 class="page-title mdc-typography--headline2">Conditions</h1>
 
+
+			<div class="main-spinner spinner">Loading...</div>
+
 			<button class="mdc-icon-button close-item material-icons">close</button>
 
 			<div class="stats-wrapper  margin-bottom_large">
