--- a/characterbuilder.html
+++ b/characterbuilder.html
@@ -6,7 +6,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Cults - 5e Tools</title>
+	<!--
+	XML data was compiled by a reddit community for use with the "Fight Club 5" app.
+	Google "5e xml files" for more info.
+
+	Feel free to use, edit, and redistribute this as you wish.
+	I don't own any of the XML data anyway.
+-->
+
+	<title>Character Builder - 5e Tools</title>
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/material-components-web.min.css">
@@ -26,8 +34,8 @@
 		<div class="mdc-top-app-bar__row">
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb"><a href="./index.html">References</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Cults</a></div>
+					<div class="breadcrumbs__crumb"><a href="./index.html">Tools</a></div>
+					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Character Builder</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
 			</div>
@@ -116,7 +124,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">record_voice_over</i>
 					<span class="mdc-list-item__text">Psionics</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="cults.html">
+				<a class="mdc-list-item mdc-theme--on-surface" href="cults.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">group</i>
 					<span class="mdc-list-item__text">Cults</span>
 				</a>
@@ -137,49 +145,48 @@
 
 	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
 		<div class="container">
-			<h1 class="page-title mdc-typography--headline2">Cults</h1>
-
-
-			<div class="main-spinner spinner">Loading...</div>
-
-			<button class="mdc-icon-button close-item material-icons">close</button>
-
-			<div class="stats-wrapper  margin-bottom_large">
-				<div class="text"></div>
+			<div class="builder-name-wrapper mdc-text-field mdc-text-field--filled mdc-text-field--with-leading-icon">
+				<i class="material-icons mdc-text-field__icon mdc-theme--primary">edit</i>
+				<input type="text" id="name-field" class="mdc-text-field__input">
+				<div class="mdc-notched-outline__notch">
+					<label for="name-field" class="mdc-floating-label">Character Name</label>
+				</div>
 			</div>
-
-			<div id="listcontainer">
-				<div id="filter-search-input-group" class="filter-group">
-					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
-  						<i class="material-icons mdc-text-field__icon mdc-theme--primary">search</i>
-						<input type="search" id="search-field" class="mdc-text-field__input search" >
-						<div class="mdc-notched-outline">
-							<div class="mdc-notched-outline__leading"></div>
-							<div class="mdc-notched-outline__notch">
-								<label for="search-field" class="mdc-floating-label">Search</label>
-							</div>
-							<div class="mdc-notched-outline__trailing"></div>
-						</div>
-					</div>
-					<div class="filter-group--buttons">
-						<button class="mdc-button mdc-button--raised" id="reset">
-							<span class="mdc-button__label">Reset</span>
-						</button>
-					</div>
-				</div>
-
-				<div class="table-wrap mdc-elevation--z6">
-					<div class="table--scroll">
-						<table class="table">
-							<thead>
-								<tr class="table-row table-row--header">
-									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-								</tr>
-							</thead>
-							<tbody class="list cults"></tbody>
-						</table>
-					</div>
-				</div>
+			
+			<div id="classtable">
+				<table class="table">
+					<tbody>
+						<tr id="groupHeaders" class="table-row table-row--header">
+							<th colspan="3"></th>
+							<th colspan="2"></th>
+						</tr>
+						<tr id="colHeaders" class="table-row table-row--header">
+							<th class="level table-cell">Level</th>
+							<th class="pb table-cell">Proficiency Bonus</th>
+							<th class="features table-cell">Features</th>
+							<th class="centred-col table-cell">Rages</th>
+							<th class="centred-col table-cell">Rage Damage</th>
+						</tr>
+						<tr id="level1" class="table-row">
+							<td class="level table-cell">1st</td>
+							<td class="pb table-cell">+2</td>
+							<td class="features table-cell"><a href="#barbarian_phb,f:rage0" class="feature-link" data-flink="f:rage0" data-flink-id="f:rage_0">Rage</a>, <a href="#barbarian_phb,f:unarmored%20defense0" class="feature-link" data-flink="f:unarmored%20defense0" data-flink-id="f:unarmored%20defense_0">Unarmored Defense</a></td>
+							<td class="centred-col">2</td>
+							<td class="centred-col">+2</td>
+						</tr>
+						<tr id="level2" class="table-row">
+							<td class="level table-cell">2nd</td>
+							<td class="pb table-cell">+2</td>
+							<td class="features table-cell"><a href="#barbarian_phb,f:danger%20sense1" class="feature-link" data-flink="f:danger%20sense1" data-flink-id="f:danger%20sense_1">Danger Sense</a>, <a href="#barbarian_phb,f:reckless%20attack1" class="feature-link" data-flink="f:reckless%20attack1" data-flink-id="f:reckless%20attack_1">Reckless Attack</a></td>
+							<td class="centred-col">2</td>
+							<td class="centred-col">+2</td>
+						</tr>
+					</tbody>
+				</table>
+				<button class="mdc-button class-add-button">
+					<i class="material-icons mdc-button__icon">add</i>
+					<span class="mdc-button__label">Add Level</span>
+				</button>
 			</div>
 		</div>
 	</div>
@@ -192,7 +199,7 @@
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/filter.js"></script>
 	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/cults.js"></script>
+	<script type="text/javascript" src="js/characterbuilder.js"></script>
 	<script type="text/javascript" src="lib/list.js"></script>
 	<script type="text/javascript" src="lib/jquery.js"></script>
 </body>
