--- a/items.html
+++ b/items.html
@@ -148,6 +148,9 @@
 		<div class="container">
 			<h1 class="page-title mdc-typography--headline2">Items</h1>
 
+
+			<div class="main-spinner spinner">Loading...</div>
+
 			<button class="mdc-icon-button close-item material-icons">close</button>
 
 			<div class="stats-wrapper  margin-bottom_large">
