Begun implementing polymer3 components. Feats.html working.

--- a/static/conditions.html
+++ b/static/conditions.html
@@ -6,18 +6,26 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Cults - 5e Tools</title>
+	<!--
+	XML data was compiled by a reddit community for use with the "Fight Club 5" app.
+	Google "5e xml files" for more info.
 
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/material-components-web.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+	Feel free to use, edit, and redistribute this as you wish.
+	I don't own any of the XML data anyway.
+-->
 
-	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-	<link rel="manifest" href="manifest.json">
+	<title>Conditions - 5e Tools</title>
+
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/material-components-web.min.css">
+	<link rel="stylesheet" href="../css/styles.css">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+	<link rel="manifest" href="../manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='js/darkmode.js'></script>
+	<script type='text/javascript' src='../js/darkmode.js'></script>
 </head>
 
 <body>
@@ -27,7 +35,7 @@
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
 					<div class="breadcrumbs__crumb"><a href="./index.html">References</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Cults</a></div>
+					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Conditions</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
 			</div>
@@ -96,7 +104,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">flash_on</i>
 					<span class="mdc-list-item__text">Spells</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="conditions.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="conditions.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">sentiment_very_dissatisfied</i>
 					<span class="mdc-list-item__text">Conditions</span>
 				</a>
@@ -116,7 +124,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">record_voice_over</i>
 					<span class="mdc-list-item__text">Psionics</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="cults.html">
+				<a class="mdc-list-item mdc-theme--on-surface" href="cults.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">group</i>
 					<span class="mdc-list-item__text">Cults</span>
 				</a>
@@ -137,7 +145,7 @@
 
 	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
 		<div class="container">
-			<h1 class="page-title mdc-typography--headline2">Cults</h1>
+			<h1 class="page-title mdc-typography--headline2">Conditions</h1>
 
 
 			<div class="main-spinner spinner">Loading...</div>
@@ -176,7 +184,7 @@
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
 								</tr>
 							</thead>
-							<tbody class="list cults"></tbody>
+							<tbody class='list conditions'></tbody>
 						</table>
 					</div>
 				</div>
@@ -184,17 +192,17 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="lib/swipe.js"></script>
+	<script type="text/javascript" src="../lib/material-components-web.min.js"></script>
+	<script type="text/javascript" src="../lib/swipe.js"></script>
  
-    <script type="text/javascript" src="js/nav.js"></script>
+    <script type="text/javascript" src="../js/nav.js"></script>
 
-	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/filter.js"></script>
-	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/cults.js"></script>
-	<script type="text/javascript" src="lib/list.js"></script>
-	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script type="text/javascript" src="../js/utils.js"></script>
+	<script type="text/javascript" src="../js/filter.js"></script>
+	<script type="text/javascript" src="../js/history.js"></script>
+	<script type="text/javascript" src="../js/conditions.js"></script>
+	<script type="text/javascript" src="../lib/list.js"></script>
+	<script type="text/javascript" src="../lib/jquery.js"></script>
 </body>
 
 </html>
