--- a/static/backgrounds.html
+++ b/static/backgrounds.html
@@ -15,18 +15,18 @@
 -->
 
 
-	<title>Items - 5e Tools</title>
+	<title>Backgrounds - 5e Tools</title>
 
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/material-components-web.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/material-components-web.min.css">
+	<link rel="stylesheet" href="../css/styles.css">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+	<link rel="manifest" href="../manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='js/darkmode.js'></script>
+	<script type='text/javascript' src='../js/darkmode.js'></script>
 </head>
 
 <body>
@@ -35,8 +35,8 @@
 		<div class="mdc-top-app-bar__row">
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb"><a href="./index.html">References</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Items</a></div>
+					<div class="breadcrumbs__crumb"><a href="./index.html">Player Options</a></div>
+					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Backgrounds</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
 			</div>
@@ -76,7 +76,6 @@
 				</a>
 				<a class="mdc-list-item mdc-theme--on-surface" href="variantrules.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
-					
 					<span class="mdc-list-item__text">Variant Rules</span>
 				</a>
 
@@ -86,7 +85,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">class</i>
 					<span class="mdc-list-item__text">Classes</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="backgrounds.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="backgrounds.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">public</i>
 					<span class="mdc-list-item__text">Backgrounds</span>
 				</a>
@@ -109,7 +108,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">sentiment_very_dissatisfied</i>
 					<span class="mdc-list-item__text">Conditions</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="items.html">
+				<a class="mdc-list-item mdc-theme--on-surface" href="items.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">restaurant</i>
 					<span class="mdc-list-item__text">Items</span>
 				</a>
@@ -146,7 +145,7 @@
 
 	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
 		<div class="container">
-			<h1 class="page-title mdc-typography--headline2">Items</h1>
+			<h1 class="page-title mdc-typography--headline2">Backgrounds</h1>
 
 
 			<div class="main-spinner spinner">Loading...</div>
@@ -154,26 +153,22 @@
 			<button class="mdc-icon-button close-item material-icons">close</button>
 
 			<div class="stats-wrapper  margin-bottom_large">
-				<div class="margin-bottom_small">
-					<span class="type"></span><span class="rarity"></span>
-					<span class="attunement"></span>
+				<div class="name margin-bottom_small"></div>
+				<div class="stats margin-bottom_small"></div>
+				<div class="table-container collapse collapse--left-arrow disabled">
+					<div class="collapse-toggle">
+						<div class="mdc-list-item">Trait Roll Tables</div>
+					</div>
+					<div class="collapse-wrapper">
+						<div class="collapse-list"></div>
+					</div>
 				</div>
-				<div class="margin-bottom_small">
-					<span class="value"></span><span class="weight"></span>
-				</div>
-				<div class="margin-bottom_small">
-					<span class="damage"></span>
-					<span class="damageType"></span>
-					<span class="properties"></span>
-				</div>
-				<div class="text"></div>
-				<div class="margin-bottom_small">Source: <span class="source"></span></div>
 			</div>
 
 			<div id="listcontainer">
 				<div id="filter-search-input-group" class="filter-group">
 					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
-						<i class="material-icons mdc-text-field__icon mdc-theme--primary">search</i>
+  						<i class="material-icons mdc-text-field__icon mdc-theme--primary">search</i>
 						<input type="search" id="search-field" class="mdc-text-field__input search" >
 						<div class="mdc-notched-outline">
 							<div class="mdc-notched-outline__leading"></div>
@@ -196,12 +191,11 @@
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-									<th class="sort" data-sort="type"><div class="table-cell">Type</div></th>
-									<th class="sort hidden-mobile-down" data-sort="source"><div class="table-cell">Source</div></th>
-									<th class="sort hidden-mobile-down" data-sort="rarity"><div class="table-cell">Rarity</div></th>
+									<th class="sort hidden-mobile-down" data-sort="source"><div class="table-cell" style="width: 108px;padding-left: 0;">Source</div></th>
+									<th class="sort" data-sort="proficiencies"><div class="table-cell">Proficiencies</div></th>
 								</tr>
 							</thead>
-							<tbody class='list items'></tbody>
+							<tbody class="list backgrounds"></tbody>
 						</table>
 					</div>
 				</div>
@@ -209,19 +203,17 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="lib/swipe.js"></script>
+	<script type="text/javascript" src="../lib/material-components-web.min.js"></script>
+	<script type="text/javascript" src="../lib/swipe.js"></script>
  
-    <script type="text/javascript" src="js/nav.js"></script>
+    <script type="text/javascript" src="../js/nav.js"></script>
 
-	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/filter.js"></script>
-	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/entryrender.js"></script>
-	<script type="text/javascript" src="js/items.js"></script>
-	<script type="text/javascript" src="lib/droll.js"></script>
-	<script type="text/javascript" src="lib/list.js"></script>
-	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script type="text/javascript" src="../js/utils.js"></script>
+	<script type="text/javascript" src="../js/filter.js"></script>
+	<script type="text/javascript" src="../js/history.js"></script>
+	<script type="text/javascript" src="../js/backgrounds.js"></script>
+	<script type="text/javascript" src="../lib/list.js"></script>
+	<script type="text/javascript" src="../lib/jquery.js"></script>
 </body>
 
 </html>
