--- a/static/bestiary.html
+++ b/static/bestiary.html
@@ -6,36 +6,27 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!--
-	XML data was compiled by a reddit community for use with the "Fight Club 5" app.
-	Google "5e xml files" for more info.
+	<title>Bestiary - 5e Tools</title>
 
-	Feel free to use, edit, and redistribute this as you wish.
-	I don't own any of the XML data anyway.
--->
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/material-components-web.min.css">
+	<link rel="stylesheet" href="../css/styles.css">
 
-	<title>Conditions - 5e Tools</title>
-
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/material-components-web.min.css">
-	<link rel="stylesheet" href="css/styles.css">
-
-	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+	<link rel="manifest" href="../manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='js/darkmode.js'></script>
+	<script type='text/javascript' src='../js/darkmode.js'></script>
 </head>
 
 <body>
-
 	<header class="mdc-top-app-bar mdc-top-app-bar--fixed mdc-theme--primary-bg mdc-theme--on-primary">
 		<div class="mdc-top-app-bar__row">
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
 					<div class="breadcrumbs__crumb"><a href="./index.html">References</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Conditions</a></div>
+					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Bestiary</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
 			</div>
@@ -104,7 +95,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">flash_on</i>
 					<span class="mdc-list-item__text">Spells</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="conditions.html">
+				<a class="mdc-list-item mdc-theme--on-surface" href="conditions.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">sentiment_very_dissatisfied</i>
 					<span class="mdc-list-item__text">Conditions</span>
 				</a>
@@ -116,7 +107,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">toll</i>
 					<span class="mdc-list-item__text">Other Rewards</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="bestiary.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="bestiary.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">warning</i>
 					<span class="mdc-list-item__text">Bestiary</span>
 				</a>
@@ -145,15 +136,111 @@
 
 	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
 		<div class="container">
-			<h1 class="page-title mdc-typography--headline2">Conditions</h1>
-
+			<h1 class="page-title mdc-typography--headline2">Bestiary</h1>
 
 			<div class="main-spinner spinner">Loading...</div>
 
 			<button class="mdc-icon-button close-item material-icons">close</button>
 
-			<div class="stats-wrapper  margin-bottom_large">
-				<div class="text"></div>
+			<div id="statscontainer" class="margin-bottom_large stats-wrapper">
+				<div id="stats" class="monster">
+					<div id="name">
+						Name <span class="source" title="Source book">SRC</span>
+					</div>
+					<div id="sizetypealignment">
+						<span id="size">Size</span> <span id="type">type</span>, <span id="alignment">alignment</span>
+					</div>
+					<div class="divider"></div>
+					<div>
+						<strong>Armor Class</strong> <span id="ac">## (source)</span>
+					</div>
+					<div>
+						<strong>Hit Points</strong> <span id="hp">hp</span>
+					</div>
+					<div>
+						<strong>Speed</strong> <span id="speed">30 ft.</span>
+					</div>
+					<div id="abilitynames">
+						<div>STR</div>
+						<div>DEX</div>
+						<div>CON</div>
+						<div>INT</div>
+						<div>WIS</div>
+						<div>CHA</div>
+					</div>
+					<div id="abilityscores">
+						<div id="str"><span class="score">10</span> (<span class="mod">0</span>)</div>
+						<div id="dex"><span class="score">10</span> (<span class="mod">0</span>)</div>
+						<div id="con"><span class="score">10</span> (<span class="mod">0</span>)</div>
+						<div id="int"><span class="score">10</span> (<span class="mod">0</span>)</div>
+						<div id="wis"><span class="score">10</span> (<span class="mod">0</span>)</div>
+						<div id="cha"><span class="score">10</span> (<span class="mod">0</span>)</div>
+					</div>
+					<div>
+						<strong>Saving Throws</strong> <span id="saves">Str +0</span>
+					</div>
+					<div>
+						<strong>Skills</strong> <span id="skills">Perception +0</span>
+					</div>
+					<div>
+						<strong>Damage Vulnerabilities</strong> <span id="dmgvuln">fire</span>
+					</div>
+					<div>
+						<strong>Damage Resistances</strong> <span id="dmgres">cold</span>
+					</div>
+					<div>
+						<strong>Damage Immunities</strong> <span id="dmgimm">lightning</span>
+					</div>
+					<div>
+						<strong>Condition Immunities</strong> <span id="conimm">exhaustion</span>
+					</div>
+					<div>
+						<strong>Senses</strong> <span id="senses">darkvision 30 ft.</span> passive Perception <span id="pp">10</span>
+					</div>
+					<div>
+						<strong>Languages</strong> <span id="languages">Common</span>
+					</div>
+					<div>
+						<strong>Challenge</strong> <span id="cr">1</span> (<span id="xp">450</span> XP)
+					</div>
+					<div id="traits">
+						<td class="divider"><div></div>
+					</div>
+					<div class="trait">
+						<span class="name">Trait.</span> <span class="content">Content.</span>
+					</div>
+					<div id="actions">
+						<span>Actions</span>
+					</div>
+					<div class="action">
+						<span class="name">Action.</span> <span class="content">Content.</span>
+					</div>
+					<div id="reactions">
+						<span>Reactions</span>
+					</div>
+					<div class="reaction">
+						<span class="name">Reaction.</span> <span class="content">Content.</span>
+					</div>
+					<div id="legendaries">
+						<span>Legendary Actions</span>
+					</div>
+					<div class="legendary">
+						<span class="name">Action.</span> <span class="content">Content.</span>
+					</div>
+					<div id="lairactions">
+						<span>Lair Actions</span>
+					</div>
+					<div class="lairaction">
+						<span class="name">Action.</span> <span class="content">Content.</span>
+					</div>
+					<div id="regionaleffects">
+						<span>Regional Effects</span>
+					</div>
+					<div class="regionaleffect">
+						<span class="name">Effect.</span> <span class="content">Content.</span>
+					</div>
+				</div>
+				<div id="output"></div>
 			</div>
 
 			<div id="listcontainer">
@@ -182,9 +269,12 @@
 							<thead>
 								<tr class="table-row table-row--header">
 									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
+									<th class="sort" data-sort="source"><div class="table-cell">Source</div></th>
+									<th class="sort hidden-mobile-down" data-sort="type"><div class="table-cell">Type</div></th>
+									<th class="sort" data-sort="cr"><div class="table-cell" style="width: 50px;">CR</div></th>
 								</tr>
 							</thead>
-							<tbody class='list conditions'></tbody>
+							<tbody class="list monsters"></tbody>
 						</table>
 					</div>
 				</div>
@@ -192,17 +282,19 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="lib/swipe.js"></script>
+	<script type="text/javascript" src="../lib/material-components-web.min.js"></script>
+	<script type="text/javascript" src="../lib/swipe.js"></script>
  
-    <script type="text/javascript" src="js/nav.js"></script>
+    <script type="text/javascript" src="../js/nav.js"></script>
 
-	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/filter.js"></script>
-	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/conditions.js"></script>
-	<script type="text/javascript" src="lib/list.js"></script>
-	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script type="text/javascript" src="../js/utils.js"></script>
+	<script type="text/javascript" src="../js/filter.js"></script>
+	<script type="text/javascript" src="../js/history.js"></script>
+	<script type="text/javascript" src="../js/entryrender.js"></script>
+	<script type="text/javascript" src="../lib/droll.js"></script>
+	<script type="text/javascript" src="../js/bestiary.js"></script>
+	<script type="text/javascript" src="../lib/list.js"></script>
+	<script type="text/javascript" src="../lib/jquery.js"></script>
 </body>
 
 </html>
