--- a/static/index.html
+++ b/static/index.html
@@ -5,28 +5,25 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<!--
 	XML data was compiled by a reddit community for use with the "Fight Club 5" app.
 	Google "5e xml files" for more info.
 
 	Feel free to use, edit, and redistribute this as you wish.
 	I don't own any of the XML data anyway.
--->
+	-->
+	<title>5e Tools</title>
 
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/material-components-web.min.css">
+	<link rel="stylesheet" href="../css/styles.css">
 
-	<title>Backgrounds - 5e Tools</title>
-
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/material-components-web.min.css">
-	<link rel="stylesheet" href="css/styles.css">
-
-	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+	<link rel="manifest" href="../manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='js/darkmode.js'></script>
+	<script type='text/javascript' src='../js/darkmode.js'></script>
 </head>
 
 <body>
@@ -35,9 +32,6 @@
 		<div class="mdc-top-app-bar__row">
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb"><a href="./index.html">Player Options</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Backgrounds</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
 			</div>
 			<div class="nav-button">
@@ -76,6 +70,7 @@
 				</a>
 				<a class="mdc-list-item mdc-theme--on-surface" href="variantrules.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
+					
 					<span class="mdc-list-item__text">Variant Rules</span>
 				</a>
 
@@ -85,7 +80,7 @@
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">class</i>
 					<span class="mdc-list-item__text">Classes</span>
 				</a>
-				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="backgrounds.html">
+				<a class="mdc-list-item mdc-theme--on-surface" href="backgrounds.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">public</i>
 					<span class="mdc-list-item__text">Backgrounds</span>
 				</a>
@@ -136,84 +131,108 @@
 					<span class="mdc-list-item__text">Dice Roller</span>
 				</a>
 				<span class='version mdc-typography--caption'>v1.2.1</span>
-				
 			</nav>
 		</div>
 	</aside>
 
 	<div class="mdc-drawer-scrim"></div>
-
-	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
+	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background landing-page">
 		<div class="container">
-			<h1 class="page-title mdc-typography--headline2">Backgrounds</h1>
-
-
-			<div class="main-spinner spinner">Loading...</div>
-
-			<button class="mdc-icon-button close-item material-icons">close</button>
-
-			<div class="stats-wrapper  margin-bottom_large">
-				<div class="name margin-bottom_small"></div>
-				<div class="stats margin-bottom_small"></div>
-				<div class="table-container collapse collapse--left-arrow disabled">
-					<div class="collapse-toggle">
-						<div class="mdc-list-item">Trait Roll Tables</div>
-					</div>
-					<div class="collapse-wrapper">
-						<div class="collapse-list"></div>
-					</div>
-				</div>
+			<h1 class="mdc-typography--headline2 margin-bottom_large margin-top_large typography_mono">5e Tools</h1>
+			
+			<h2 class="mdc-typography--headline5 margin-bottom_small margin-top_med">Rules</h2>
+			<div class="class-list-container">
+				<a class="class-grid-item" href="rules.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">library_books</i>
+					<span class="class-grid-item--text">Rules</span>
+				</a>
+				<a class="class-grid-item" href="variantrules.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">description</i>
+					<span class="class-grid-item--text">Variant Rules</span>
+				</a>
 			</div>
 
-			<div id="listcontainer">
-				<div id="filter-search-input-group" class="filter-group">
-					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
-  						<i class="material-icons mdc-text-field__icon mdc-theme--primary">search</i>
-						<input type="search" id="search-field" class="mdc-text-field__input search" >
-						<div class="mdc-notched-outline">
-							<div class="mdc-notched-outline__leading"></div>
-							<div class="mdc-notched-outline__notch">
-								<label for="search-field" class="mdc-floating-label">Search</label>
-							</div>
-							<div class="mdc-notched-outline__trailing"></div>
-						</div>
-					</div>
-					<div class="filter-group--buttons">
-						<button class="mdc-button mdc-button--raised" id="reset">
-							<span class="mdc-button__label">Reset</span>
-						</button>
-					</div>
-				</div>
+			<h2 class="mdc-typography--headline5 margin-bottom_small margin-top_med">Player Options</h2>
+			<div class="class-list-container">
+				<a class="class-grid-item" href="classes.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">class</i>
+					<span class="class-grid-item--text">Classes</span>
+				</a>
+				<a class="class-grid-item" href="backgrounds.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">public</i>
+					<span class="class-grid-item--text">Backgrounds</span>
+				</a>
+				<a class="class-grid-item" href="feats.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">fitness_center</i>
+					<span class="class-grid-item--text">Feats</span>
+				</a>
+				<a class="class-grid-item" href="races.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">face</i>
+					<span class="class-grid-item--text">Races</span>
+				</a>
+			</div>
 
-				<div class="table-wrap mdc-elevation--z6">
-					<div class="table--scroll">
-						<table class="table">
-							<thead>
-								<tr class="table-row table-row--header">
-									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-									<th class="sort hidden-mobile-down" data-sort="source"><div class="table-cell" style="width: 108px;padding-left: 0;">Source</div></th>
-									<th class="sort" data-sort="proficiencies"><div class="table-cell">Proficiencies</div></th>
-								</tr>
-							</thead>
-							<tbody class="list backgrounds"></tbody>
-						</table>
-					</div>
-				</div>
+			<h2 class="mdc-typography--headline5 margin-bottom_small margin-top_med">References</h2>
+			<div class="class-list-container">
+				<a class="class-grid-item" href="spells.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">flash_on</i>
+					<span class="class-grid-item--text">Spells</span>
+				</a>
+				<a class="class-grid-item" href="conditions.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">sentiment_very_dissatisfied</i>
+					<span class="class-grid-item--text">Conditions</span>
+				</a>
+				<a class="class-grid-item" href="items.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">restaurant</i>
+					<span class="class-grid-item--text">Items</span>
+				</a>
+				<a class="class-grid-item" href="rewards.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">toll</i>
+					<span class="class-grid-item--text">Other Rewards</span>
+				</a>
+				<a class="class-grid-item" href="bestiary.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">warning</i>
+					<span class="class-grid-item--text">Bestiary</span>
+				</a>
+				<a class="class-grid-item" href="psionics.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">record_voice_over</i>
+					<span class="class-grid-item--text">Psionics</span>
+				</a>
+				<a class="class-grid-item" href="cults.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">group</i>
+					<span class="class-grid-item--text">Cults</span>
+				</a>
+			</div>
+
+			<h2 class="mdc-typography--headline5 margin-bottom_small margin-top_med">Tools</h2>
+			<div class="class-list-container">
+				<a class="class-grid-item" href="dice.html">
+					<i class="material-icons mdc-theme--on-surface link-grid-item--image" aria-hidden="true">casino</i>
+					<span class="class-grid-item--text">Dice Roller</span>
+				</a>
 			</div>
 		</div>
 	</div>
 
-	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="lib/swipe.js"></script>
- 
-    <script type="text/javascript" src="js/nav.js"></script>
-
-	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/filter.js"></script>
-	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/backgrounds.js"></script>
-	<script type="text/javascript" src="lib/list.js"></script>
-	<script type="text/javascript" src="lib/jquery.js"></script>
+	<!-- <script type="text/javascript">
+		if ("serviceWorker" in navigator) {
+			window.addEventListener("load", function() {
+				navigator.serviceWorker.register("/../service-worker.js").then(
+					function(registration) {
+						// Registration was successful
+						console.log("ServiceWorker registration successful with scope: ", registration.scope);
+					},
+					function(err) {
+						// registration failed :(
+						console.log("ServiceWorker registration failed: ", err);
+					}
+				);
+			});
+		}
+	</script> -->
+	<script type="text/javascript" src="../lib/material-components-web.min.js"></script>
+	<script type="text/javascript" src="../lib/jquery.js"></script>
+	<script type="text/javascript" src="../lib/swipe.js"></script>
+	<script type="text/javascript" src="../js/nav.js"></script>
 </body>
-
 </html>
