--- a/static/psionics.html
+++ b/static/psionics.html
@@ -9,16 +9,16 @@
 
 	<title>Psionics - 5e Tools</title>
 
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/material-components-web.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/material-components-web.min.css">
+	<link rel="stylesheet" href="../css/styles.css">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+	<link rel="manifest" href="../manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='js/darkmode.js'></script>
+	<script type='text/javascript' src='../js/darkmode.js'></script>
 </head>
 
 <body>
@@ -190,17 +190,17 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="lib/swipe.js"></script>
+	<script type="text/javascript" src="../lib/material-components-web.min.js"></script>
+	<script type="text/javascript" src="../lib/swipe.js"></script>
  
-    <script type="text/javascript" src="js/nav.js"></script>
+    <script type="text/javascript" src="../js/nav.js"></script>
 
-	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/filter.js"></script>
-	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/psionics.js"></script>
-	<script type="text/javascript" src="lib/list.js"></script>
-	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script type="text/javascript" src="../js/utils.js"></script>
+	<script type="text/javascript" src="../js/filter.js"></script>
+	<script type="text/javascript" src="../js/history.js"></script>
+	<script type="text/javascript" src="../js/psionics.js"></script>
+	<script type="text/javascript" src="../lib/list.js"></script>
+	<script type="text/javascript" src="../lib/jquery.js"></script>
 
 </body>
 
