--- a/static/spells.html
+++ b/static/spells.html
@@ -14,18 +14,18 @@
 	I don't own any of the XML data anyway.
 -->
 
-	<title>Character Builder - 5e Tools</title>
+	<title>Spells - 5e Tools</title>
 
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/material-components-web.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/material-components-web.min.css">
+	<link rel="stylesheet" href="../css/styles.css">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-	<link rel="shortcut icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-	<link rel="shortcut icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+	<link rel="manifest" href="../manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='js/darkmode.js'></script>
+	<script type='text/javascript' src='../js/darkmode.js'></script>
 </head>
 
 <body>
@@ -34,8 +34,8 @@
 		<div class="mdc-top-app-bar__row">
 			<div class="breadcrumbs mdc-theme--on-primary">
 				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb"><a href="./index.html">Tools</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Character Builder</a></div>
+					<div class="breadcrumbs__crumb"><a href="./index.html">References</a></div>
+					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Spells</a></div>
 					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
 				</div>
 			</div>
@@ -100,7 +100,7 @@
 
 				<hr class="mdc-list-divider">
 				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">References</h6>
-				<a class="mdc-list-item mdc-theme--on-surface" href="spells.html">
+				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="spells.html">
 					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">flash_on</i>
 					<span class="mdc-list-item__text">Spells</span>
 				</a>
@@ -145,63 +145,68 @@
 
 	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
 		<div class="container">
-			<div class="builder-name-wrapper mdc-text-field mdc-text-field--filled mdc-text-field--with-leading-icon">
-				<i class="material-icons mdc-text-field__icon mdc-theme--primary">edit</i>
-				<input type="text" id="name-field" class="mdc-text-field__input">
-				<div class="mdc-notched-outline__notch">
-					<label for="name-field" class="mdc-floating-label">Character Name</label>
-				</div>
+			<h1 class="page-title mdc-typography--headline2">Spells</h1>
+
+
+			<div class="main-spinner spinner">Loading...</div>
+
+			<button class="mdc-icon-button close-item material-icons">close</button>
+
+			<div class="stats-wrapper margin-bottom_large">
 			</div>
-			
-			<div id="classtable">
-				<table class="table">
-					<tbody>
-						<tr id="groupHeaders" class="table-row table-row--header">
-							<th colspan="3"></th>
-							<th colspan="2"></th>
-						</tr>
-						<tr id="colHeaders" class="table-row table-row--header">
-							<th class="level table-cell">Level</th>
-							<th class="pb table-cell">Proficiency Bonus</th>
-							<th class="features table-cell">Features</th>
-							<th class="centred-col table-cell">Rages</th>
-							<th class="centred-col table-cell">Rage Damage</th>
-						</tr>
-						<tr id="level1" class="table-row">
-							<td class="level table-cell">1st</td>
-							<td class="pb table-cell">+2</td>
-							<td class="features table-cell"><a href="#barbarian_phb,f:rage0" class="feature-link" data-flink="f:rage0" data-flink-id="f:rage_0">Rage</a>, <a href="#barbarian_phb,f:unarmored%20defense0" class="feature-link" data-flink="f:unarmored%20defense0" data-flink-id="f:unarmored%20defense_0">Unarmored Defense</a></td>
-							<td class="centred-col">2</td>
-							<td class="centred-col">+2</td>
-						</tr>
-						<tr id="level2" class="table-row">
-							<td class="level table-cell">2nd</td>
-							<td class="pb table-cell">+2</td>
-							<td class="features table-cell"><a href="#barbarian_phb,f:danger%20sense1" class="feature-link" data-flink="f:danger%20sense1" data-flink-id="f:danger%20sense_1">Danger Sense</a>, <a href="#barbarian_phb,f:reckless%20attack1" class="feature-link" data-flink="f:reckless%20attack1" data-flink-id="f:reckless%20attack_1">Reckless Attack</a></td>
-							<td class="centred-col">2</td>
-							<td class="centred-col">+2</td>
-						</tr>
-					</tbody>
-				</table>
-				<button class="mdc-button class-add-button">
-					<i class="material-icons mdc-button__icon">add</i>
-					<span class="mdc-button__label">Add Level</span>
-				</button>
+
+			<div id="listcontainer">
+				<div id="filter-search-input-group" class="filter-group">
+					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
+  						<i class="material-icons mdc-text-field__icon mdc-theme--primary">search</i>
+						<input type="search" id="search-field" class="mdc-text-field__input search" >
+						<div class="mdc-notched-outline">
+							<div class="mdc-notched-outline__leading"></div>
+							<div class="mdc-notched-outline__notch">
+								<label for="search-field" class="mdc-floating-label">Search</label>
+							</div>
+							<div class="mdc-notched-outline__trailing"></div>
+						</div>
+					</div>
+					<div class="filter-group--buttons">
+						<button class="mdc-button mdc-button--raised" id="reset">
+							<span class="mdc-button__label">Reset</span>
+						</button>
+					</div>
+				</div>
+
+				<div class="table-wrap mdc-elevation--z6">
+					<div class="table--scroll">
+						<table class="table">
+							<thead>
+								<tr class="table-row table-row--header">
+									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
+									<th class="sort" data-sort="source"><div class="table-cell">Source</div></th>
+									<th class="sort" data-sort="level"><div class="table-cell" style="width: 80px;">Level</div></th>
+									<th class="sort hidden-mobile-down " data-sort="time"><div class="table-cell">Time</div></th>
+									<th class="sort hidden-mobile-down " data-sort="school"><div class="table-cell">School</div></th>
+									<th class="sort hidden-mobile-down " data-sort="range"><div class="table-cell">Range</div></th>
+								</tr>
+							</thead>
+							<tbody class='list spells'></tbody> 
+						</table>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<script type="text/javascript" src="lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="lib/swipe.js"></script>
+	<script type="text/javascript" src="../lib/material-components-web.min.js"></script>
+	<script type="text/javascript" src="../lib/swipe.js"></script>
  
-    <script type="text/javascript" src="js/nav.js"></script>
+    <script type="text/javascript" src="../js/nav.js"></script>
 
-	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/filter.js"></script>
-	<script type="text/javascript" src="js/history.js"></script>
-	<script type="text/javascript" src="js/characterbuilder.js"></script>
-	<script type="text/javascript" src="lib/list.js"></script>
-	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script type="text/javascript" src="../js/utils.js"></script>
+	<script type="text/javascript" src="../js/filter.js"></script>
+	<script type="text/javascript" src="../js/history.js"></script>
+	<script type="text/javascript" src="../js/entryrender.js"></script>
+	<script type="text/javascript" src="../js/spells.js"></script>
+	<script type="text/javascript" src="../lib/list.js"></script>
+	<script type="text/javascript" src="../lib/jquery.js"></script>
 </body>
-
 </html>
